@@ -825,6 +825,46 @@ class tx_directmail_static {
 		}
 		return $out;
 	}
+	
+
+	/**
+	 * Copied ftom t3lib_parsehtml, since 4.1 doesn't have it.
+	 * 
+	 * Traverses the input $markContentArray array and for each key the marker by the same name (possibly wrapped and in upper case) will be substituted with the keys value in the array.
+	 * This is very useful if you have a data-record to substitute in some content. In particular when you use the $wrap and $uppercase values to pre-process the markers. Eg. a key name like "myfield" could effectively be represented by the marker "###MYFIELD###" if the wrap value was "###|###" and the $uppercase boolean true.
+	 *
+	 * @param	string		The content stream, typically HTML template content.
+	 * @param	array		The array of key/value pairs being marker/content values used in the substitution. For each element in this array the function will substitute a marker in the content stream with the content.
+	 * @param	string		A wrap value - [part 1] | [part 2] - for the markers before substitution
+	 * @param	boolean		If set, all marker string substitution is done with upper-case markers.
+	 * @param	boolean		If set, all unused marker are deleted.
+	 * @return	string		The processed output stream
+	 * @see substituteMarker(), substituteMarkerInObject(), TEMPLATE()
+	 */
+	 function substituteMarkerArray($content, $markContentArray, $wrap='', $uppercase=0, $deleteUnused=0) {
+		if (is_array($markContentArray)) {
+			$wrapArr = t3lib_div::trimExplode('|', $wrap);
+			foreach ($markContentArray as $marker => $markContent) {
+				if ($uppercase) {
+						// use strtr instead of strtoupper to avoid locale problems with Turkish
+					$marker = strtr($marker,'abcdefghijklmnopqrstuvwxyz','ABCDEFGHIJKLMNOPQRSTUVWXYZ');
+				}
+				if (count($wrapArr) > 0) {
+					$marker = $wrapArr[0].$marker.$wrapArr[1];
+				}
+				$content = str_replace($marker, $markContent, $content);
+			}
+
+			if ($deleteUnused) {
+				if (empty($wrap)) {
+					$wrapArr = array('###', '###');
+				}
+				$content = preg_replace('/'.preg_quote($wrapArr[0]).'([A-Z0-9_-|]*)'.preg_quote($wrapArr[1]).'/is', '', $content);
+			}
+		}
+		return $content;
+	}
+	
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/direct_mail/res/scripts/class.tx_directmail_static.php'])	{
